@@ -1,4 +1,4 @@
-       The Command-Line User Interface     Term::Clui   1.16
+          The Command-Line User Interface     Term::Clui
 
 Term::Clui offers a high-level user interface, with subroutines &choose
 &ask &edit &view &confirm and &sorry. It works at a higher level than
@@ -20,6 +20,7 @@ that's all ! or you can still do it the old way ...
    make install
 
 For up-to-date source, see http://www.cpan.org/SITES.html
+and look for the directory authors/id/P/PJ/PJB
 
 For the user, &edit and &view use the default EDITOR and PAGER from the
 user's environment, except that if &view is called with a very short
